# aqua-voice-alternative

./: .gitignore  LICENSE  README.md  RELEASE.md  index.html  nuxt.config.ts  package-lock.json  package.json
.github/workflows/: release.yml
src/: main.ts  recorder.ts  settings.ts  styles.css  transcriber.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/prompts/: transcription.txt
src-tauri/src/: lib.rs  main.rs
