[package]
name = "aqua-voice-alternative"
version = "0.1.0"
description = "Voice transcription app using Gemini API"
authors = ["you"]
edition = "2021"

[lib]
name = "aqua_voice_alternative_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio recording
cpal = "0.15"
hound = "3.5"

# HTTP client for Gemini API
reqwest = { version = "0.12", features = ["json"] }

# Base64 encoding
base64 = "0.22"

# Async runtime
tokio = { version = "1", features = ["sync", "time"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
